--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#000000" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/android-chrome-192x192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>XC-DB beta</title>
+    <title>XC-DB alpha</title>
 </head>
 
 <body>
